<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#c4c4c4"
    tools:context=".company_info.view.CompanyInfoListActivity">

   <android.support.v7.widget.RecyclerView
       android:id="@+id/listView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginLeft="4dp"
       android:layout_marginRight="4dp">

   </android.support.v7.widget.RecyclerView>

   <TextView
       android:id="@+id/emptyView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center"
       android:visibility="gone"
       android:text="@string/no_results_found"
       >

   </TextView>
</RelativeLayout>
